--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.3",
+    "@aws-cdk/assertions": "^1.191.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.11.9",
     "aws-cdk": "2.54.0",
-    "jest": "^29.3.1",
+    "jest": "^29.4.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.3"
